hphp/hack/test/typecheck/reified_generics/valid_targ_wildcard_new.php.exp
File "valid_targ_wildcard_new.php", line 7, characters 3-12:
All type arguments must be specified because a type parameter is reified (Typing[4303])
File "valid_targ_wildcard_new.php", line 4, characters 7-7:
Definition is here
File "valid_targ_wildcard_new.php", line 8, characters 9-12:
Invalid reified hint (Typing[4305])
File "valid_targ_wildcard_new.php", line 8, characters 11-11:
This is a wildcard, it cannot be used as a reified type argument
File "valid_targ_wildcard_new.php", line 4, characters 15-16:
Tc is reified
File "valid_targ_wildcard_new.php", line 8, characters 11-11:
Invalid reified hint (Typing[4305])
File "valid_targ_wildcard_new.php", line 8, characters 11-11:
This is a wildcard, it cannot be used as a reified type argument
File "valid_targ_wildcard_new.php", line 4, characters 15-16:
Tc is reified
